--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link href='https://fonts.googleapis.com/css?family=Bungee Shade' rel='stylesheet'>
     <script defer src="./connect4.js"></script>
-    <title>Connect4</title>
+    <title>Connect 4</title>
 </head>
 <body>
-    <h1>Connect 4</h1>
-    <h2 id="winner"></h2>
-    <div id="board"></div>
     
+    <div id="playAgainModal" class="hide">
+            <div id="winner"></div>
+            <button class="yes">Play Again?</button>
+            <button class="no">I'm good.</button>
+        </div>
+    <div class="main">
+        <h1>Connect 4</h1>
+        <div id="board">
+    </div>
 </body>
 </html>
