--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="./connect4.js"></script>
     <title>Connect 4</title>
 </head>
-<body>
+<body>a
     
     <div id="playAgainModal" class="hide">
             <div id="winner"></div>
