--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Connect4</title>
 </head>
 <body>
-    <h1>Connect 4</h1>
+    <hgit 1>Connect 4</h1>
     <h2 id="winner"></h2>
     <div id="board"></div>
     
